--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     </div>
 
     <!-- Main Application Script -->
+    <script src="public/config.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html>
